--- a/sample/maserie/templates/about.html
+++ b/sample/maserie/templates/about.html
@@ -1,83 +1,77 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-	<title>EndGam - Gaming Magazine Template</title>
+	<title>Bienvenue sur ma série préférée</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="EndGam Gaming Magazine Template">
-	<meta name="keywords" content="endGam,gGaming, magazine, html">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->
-	<link href="img/favicon.ico" rel="shortcut icon"/>
+	<link href="{{ url_for('static', filename='img/favicon.ico')}}" rel="shortcut icon"/>
 
 	<!-- Google Font -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
 
 
 	<!-- Stylesheets -->
-	<link rel="stylesheet" href="css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="css/font-awesome.min.css"/>
-	<link rel="stylesheet" href="css/slicknav.min.css"/>
-	<link rel="stylesheet" href="css/owl.carousel.min.css"/>
-	<link rel="stylesheet" href="css/magnific-popup.css"/>
-	<link rel="stylesheet" href="css/animate.css"/>
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}"/>
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/owl.carousel.min.css') }}"/>
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/font-awesome.min.css') }}"/>
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/animate.css') }}"/>
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/magnific-popup.css') }}"/>
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/slicknav.min.css') }}"/>
 
 	<!-- Main Stylesheets -->
-	<link rel="stylesheet" href="css/style.css"/>
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}"/>
 
 
 	<!--[if lt IE 9]>
-		  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+	  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 	  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	<![endif]-->
 
 </head>
 <body>
+
 	<!-- Page Preloder -->
 	<div id="preloder">
 		<div class="loader"></div>
 	</div>
 
 	<!-- Header section -->
-	<header class="header-section">
-		<div class="header-warp">
-			<div class="header-social d-flex justify-content-end">
-				<p>Follow us:</p>
-				<a href="#"><i class="fa fa-pinterest"></i></a>
-				<a href="#"><i class="fa fa-facebook"></i></a>
-				<a href="#"><i class="fa fa-twitter"></i></a>
-				<a href="#"><i class="fa fa-dribbble"></i></a>
-				<a href="#"><i class="fa fa-behance"></i></a>
+	<section class="header">
+		<header class="header-section">
+			<div class="header-warp">
+				<div class="header-bar-warp d-flex">
+					<!-- site logo -->
+					<a href="{{ url_for('home') }}" class="site-logo">
+						<img src="{{ url_for('static', filename='img/logo.png')}}" alt="">
+					</a>
+					<nav class="top-nav-area w-100">
+						<div class="user-panel">
+							<a href="">Login</a> / <a href="">Register</a>
+						</div>
+						<!-- Menu -->
+						<ul class="main-menu primary-menu">
+							<li><a href="{{ url_for('home')}}">Home</a></li>
+							<li><a href="{{ url_for('series')}}">Séries</a>
+								<ul class="sub-menu">
+									<li><a href="{{ url_for('gamesingle')}}">Par genre</a></li>
+									<li><a href="{{ url_for('gamesingle')}}">Les plus regardées</a></li>
+									<li><a href="{{ url_for('gamesingle')}}">Nouveautés</a></li>
+									<li><a href="{{ url_for('gamesingle')}}">Ma liste</a></li>
+								</ul>
+							</li>
+							<li><a href="{{ url_for('about')}}">About</a></li>
+							<li><a href="{{ url_for('contact')}}">Contact</a></li>
+						</ul>
+					</nav>
+				</div>
 			</div>
-			<div class="header-bar-warp d-flex">
-				<!-- site logo -->
-				<a href="home.html" class="site-logo">
-					<img src="./img/logo.png" alt="">
-				</a>
-				<nav class="top-nav-area w-100">
-					<div class="user-panel">
-						<a href="">Login</a> / <a href="">Register</a>
-					</div>
-					<!-- Menu -->
-					<ul class="main-menu primary-menu">
-						<li><a href="home.html">Home</a></li>
-						<li><a href="games.html">Games</a>
-							<ul class="sub-menu">
-								<li><a href="game-single.html">Game Singel</a></li>
-							</ul>
-						</li>
-						<li><a href="review.html">Reviews</a></li>
-						<li><a href="blog.html">News</a></li>
-						<li><a href="contact.html">Contact</a></li>
-					</ul>
-				</nav>
-			</div>
-		</div>
-	</header>
+		</header>
+	</section>
 	<!-- Header section end -->
 
 
 	<!-- Page top section -->
-	<section class="page-top-section set-bg" data-setbg="img/page-top-bg/3.jpg">
+	<section class="page-top-section" style="background:url('/static/img/page-top-bg/3.jpg');background-size:cover">
 		<div class="page-info">
 			<h2>Blog</h2>
 			<div class="site-breadcrumb">
@@ -101,30 +95,30 @@
 						<li><a href="#">Online</a></li>
 					</ul>
 					<div class="big-blog-item">
-						<img src="img/blog-big/1.jpg" alt="#" class="blog-thumbnail">
+						<img src="{{url_for('static', filename='img/blog-big/1.jpg')}}" alt="#" class="blog-thumbnail">
 						<div class="blog-content text-box text-white">
 							<div class="top-meta">11.11.18  /  in <a href="">Games</a></div>
 							<h3>The best VR games on the market</h3>
 							<p>Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.....</p>
-							<a href="#" class="read-more">Read More <img src="img/icons/double-arrow.png" alt="#"/></a>
+							<a href="#" class="read-more">Read More <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
 						</div>
 					</div>
 					<div class="big-blog-item">
-						<img src="img/blog-big/2.jpg" alt="#" class="blog-thumbnail">
+						<img src="{{url_for('static', filename='img/blog-big/2.jpg')}}" alt="#" class="blog-thumbnail">
 						<div class="blog-content text-box text-white">
 							<div class="top-meta">11.11.18  /  in <a href="">Games</a></div>
 							<h3>The best online game is out now!</h3>
 							<p>Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.....</p>
-							<a href="#" class="read-more">Read More <img src="img/icons/double-arrow.png" alt="#"/></a>
+							<a href="#" class="read-more">Read More <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
 						</div>
 					</div>
 					<div class="big-blog-item">
-						<img src="img/blog-big/3.jpg" alt="#" class="blog-thumbnail">
+						<img src="{{url_for('static', filename='img/blog-big/3.jpg')}}" alt="#" class="blog-thumbnail">
 						<div class="blog-content text-box text-white">
 							<div class="top-meta">11.11.18  /  in <a href="">Games</a></div>
 							<h3>The best online game is out now!</h3>
 							<p>Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.....</p>
-							<a href="#" class="read-more">Read More <img src="img/icons/double-arrow.png" alt="#"/></a>
+							<a href="#" class="read-more">Read More <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
 						</div>
 					</div>
 					<div class="site-pagination">
@@ -146,7 +140,7 @@
 							<div class="trending-widget">
 								<div class="tw-item">
 									<div class="tw-thumb">
-										<img src="./img/blog-widget/1.jpg" alt="#">
+										<img src="{{url_for('static', filename='img/blog-widget/1.jpg')}}" alt="#">
 									</div>
 									<div class="tw-text">
 										<div class="tw-meta">11.11.18  /  in <a href="">Games</a></div>
@@ -155,7 +149,7 @@
 								</div>
 								<div class="tw-item">
 									<div class="tw-thumb">
-										<img src="./img/blog-widget/2.jpg" alt="#">
+										<img src="{{url_for('static', filename='img/blog-widget/2.jpg')}}" alt="#">
 									</div>
 									<div class="tw-text">
 										<div class="tw-meta">11.11.18  /  in <a href="">Games</a></div>
@@ -164,7 +158,7 @@
 								</div>
 								<div class="tw-item">
 									<div class="tw-thumb">
-										<img src="./img/blog-widget/3.jpg" alt="#">
+										<img src="{{url_for('static', filename='img/blog-widget/3.jpg')}}" alt="#">
 									</div>
 									<div class="tw-text">
 										<div class="tw-meta">11.11.18  /  in <a href="">Games</a></div>
@@ -173,7 +167,7 @@
 								</div>
 								<div class="tw-item">
 									<div class="tw-thumb">
-										<img src="./img/blog-widget/4.jpg" alt="#">
+										<img src="{{url_for('static', filename='img/blog-widget/4.jpg')}}" alt="#">
 									</div>
 									<div class="tw-text">
 										<div class="tw-meta">11.11.18  /  in <a href="">Games</a></div>
@@ -199,26 +193,26 @@
 							<h4 class="widget-title">Latest Comments</h4>
 							<div class="latest-comments">
 								<div class="lc-item">
-									<img src="./img/blog-widget/1.jpg" class="lc-avatar" alt="#">
+									<img src="{{url_for('static', filename='img/blog-widget/1.jpg')}}" class="lc-avatar" alt="#">
 									<div class="tw-text"><a href="">Maria Smith</a> <span>On</span> The best online game out there </div>
 								</div>
 								<div class="lc-item">
-									<img src="./img/blog-widget/2.jpg" class="lc-avatar" alt="#">
+									<img src="{{url_for('static', filename='img/blog-widget/2.jpg')}}" class="lc-avatar" alt="#">
 									<div class="tw-text"><a href="">Maria Smith</a> <span>On</span> The best online game out there </div>
 								</div>
 								<div class="lc-item">
-									<img src="./img/blog-widget/3.jpg" class="lc-avatar" alt="#">
+									<img src="{{url_for('static', filename='img/blog-widget/3.jpg')}}" class="lc-avatar" alt="#">
 									<div class="tw-text"><a href="">Maria Smith</a> <span>On</span> The best online game out there </div>
 								</div>
 								<div class="lc-item">
-									<img src="./img/blog-widget/4.jpg" class="lc-avatar" alt="#">
+									<img src="{{url_for('static', filename='img/blog-widget/4.jpg')}}" class="lc-avatar" alt="#">
 									<div class="tw-text"><a href="">Maria Smith</a> <span>On</span> The best online game out there </div>
 								</div>
 							</div>
 						</div>
 						<div class="widget-item">
 							<a href="#" class="add">
-								<img src="./img/add.jpg" alt="">
+								<img src="{{url_for('static', filename='img/add.jpg')}}" alt="">
 							</a>
 						</div>
 					</div>
@@ -235,7 +229,7 @@
 			<h2>Subscribe to our newsletter</h2>
 			<form class="newsletter-form">
 				<input type="text" placeholder="ENTER YOUR E-MAIL">
-				<button class="site-btn">subscribe <img src="img/icons/double-arrow.png" alt="#"/></button>
+				<button class="site-btn">subscribe <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></button>
 			</form>
 		</div>
 	</section>
@@ -246,13 +240,13 @@
 	<footer class="footer-section">
 		<div class="container">
 			<div class="footer-left-pic">
-				<img src="img/footer-left-pic.png" alt="">
+				<img src="{{url_for('static', filename='img/footer-left-pic.png')}}" alt="">
 			</div>
 			<div class="footer-right-pic">
-				<img src="img/footer-right-pic.png" alt="">
+				<img src="{{url_for('static', filename='img/footer-right-pic.png')}}" alt="">
 			</div>
 			<a href="#" class="footer-logo">
-				<img src="./img/logo.png" alt="">
+				<img src="{{url_for('static', filename='/img/logo.png')}}" alt="">
 			</a>
 			<ul class="main-menu footer-menu">
 				<li><a href="">Home</a></li>
@@ -275,13 +269,13 @@
 
 
 	<!--====== Javascripts & Jquery ======-->
-	<script src="js/jquery-3.2.1.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/jquery.slicknav.min.js"></script>
-	<script src="js/owl.carousel.min.js"></script>
-	<script src="js/jquery.sticky-sidebar.min.js"></script>
-	<script src="js/jquery.magnific-popup.min.js"></script>
-	<script src="js/main.js"></script>
+	<script src="{{ url_for('static', filename='js/jquery-3.2.1.min.js')}}"></script>
+	<script src="{{ url_for('static', filename='js/bootstrap.min.js')}}"></script>
+	<script src="{{ url_for('static', filename='js/jquery.slicknav.min.js')}}"></script>
+	<script src="{{ url_for('static', filename='js/owl.carousel.min.js')}}"></script>
+	<script src="{{ url_for('static', filename='js/jquery.sticky-sidebar.min.js')}}"></script>
+	<script src="{{ url_for('static', filename='js/jquery.magnific-popup.min.js')}}"></script>
+	<script src="{{ url_for('static', filename='js/main.js')}}"></script>
 
 	</body>
 </html>
