--- a/sample/maserie/templates/home.html
+++ b/sample/maserie/templates/home.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-	<title>EndGam - Gaming Magazine Template</title>
+	<title>Bienvenue sur ma série préférée</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="EndGam Gaming Magazine Template">
-	<meta name="keywords" content="endGam,gGaming, magazine, html">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->
 	<link href="{{ url_for('static', filename='img/favicon.ico')}}" rel="shortcut icon"/>
 
@@ -33,6 +30,32 @@
 </head>
 <body>
 
+	<!-- Page Preloder -->
+	<div id="preloder">
+		<div class="loader"></div>
+	</div>
+
+		<!-- Hero section -->
+	<section class="hero-section overflow-hidden">
+		<div class="hero-slider owl-carousel">
+			<div class="hero-item d-flex align-items-center justify-content-center text-center" style="background:url('/static/img/slider-bg-1.jpg');background-size:cover">
+				<div class="container">
+					<h2>Game on!</h2>
+					<p>Fusce erat dui, venenatis et erat in, vulputate dignissim lacus. Donec vitae tempus dolor,<br>sit amet elementum lorem. Ut cursus tempor turpis.</p>
+					<a href="#" class="site-btn">Read More  <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
+				</div>
+			</div>
+			<div class="hero-item d-flex align-items-center justify-content-center text-center" style="background:url('/static/img/slider-bg-2.jpg');background-size:cover">
+				<div class="container">
+					<h2>Game on!</h2>
+					<p>Fusce erat dui, venenatis et erat in, vulputate dignissim lacus. Donec vitae tempus dolor,<br>sit amet elementum lorem. Ut cursus tempor turpis.</p>
+					<a href="#" class="site-btn">Read More  <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- Hero section end-->
+
 	<!-- Header section -->
 	<section class="header">
 		<header class="header-section">
@@ -44,7 +67,32 @@
 					</a>
 					<nav class="top-nav-area w-100">
 						<div class="user-panel">
-							<a href="">Login</a> / <a href="">Register</a>
+							<button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button> /
+							<div id="id01" class="modal">
+							  	<form class="modal-content animate" action="/action_page.php" method="post">
+									<div class="imgcontainer">
+								  		<span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
+									</div>
+								<div class="container">
+								  	<label for="uname"><b>Username</b></label>
+								 	<input type="text" placeholder="Enter Username" name="uname" required>
+
+									<label for="psw"><b>Password</b></label>
+								  	<input type="password" placeholder="Enter Password" name="psw" required>
+
+								  	<button type="submit">Login</button>
+								  	<label>
+									<input type="checkbox" checked="checked" name="remember"> Remember me
+								  	</label>
+								</div>
+
+								<div class="container" style="background-color:#f1f1f1">
+								  	<button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+								 	<span class="psw">Forgot <a href="#">password?</a></span>
+								</div>
+							  	</form>
+							</div>
+							<a href="">Register</a>
 						</div>
 						<!-- Menu -->
 						<ul class="main-menu primary-menu">
@@ -67,63 +115,27 @@
 	</section>
 	<!-- Header section end -->
 
-	<!-- intro section -->
-	<section class="intro-section">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-4">
-					<div class="intro-text-box text-box text-white">
-						<div class="top-meta">11.11.18  /  in <a href="">Games</a></div>
-						<h3>The best online game is out now!</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida....</p>
-						<a href="#" class="read-more">Read More  <img src="{{ url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="intro-text-box text-box text-white">
-						<div class="top-meta">11.11.18  /  in <a href="">Playstation</a></div>
-						<h3>Top 5 best games in november</h3>
-						<p>Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum  labore suspendisse ultrices gravida....</p>
-						<a href="#" class="read-more">Read More  <img src="{{ url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="intro-text-box text-box text-white">
-						<div class="top-meta">11.11.18  /  in <a href="">Reviews</a></div>
-						<h3>Get this game at a promo price</h3>
-						<p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida ncididunt ut labore ....</p>
-						<a href="#" class="read-more">Read More  <img src="{{ url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- Intro section end -->
-
 	<!-- Intro section -->
 	<section class="intro-section">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4">
 					<div class="intro-text-box text-box text-white">
-						<div class="top-meta">11.11.18  /  in <a href="">Games</a></div>
-						<h3>The best online game is out now!</h3>
+						<h3>Nouveautés !</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida....</p>
 						<a href="#" class="read-more">Read More  <img src="{{ url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="intro-text-box text-box text-white">
-						<div class="top-meta">11.11.18  /  in <a href="">Playstation</a></div>
-						<h3>Top 5 best games in november</h3>
+						<h3>Top 5 séries 2019 !</h3>
 						<p>Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum  labore suspendisse ultrices gravida....</p>
 						<a href="#" class="read-more">Read More  <img src="{{ url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="intro-text-box text-box text-white">
-						<div class="top-meta">11.11.18  /  in <a href="">Reviews</a></div>
-						<h3>Get this game at a promo price</h3>
+						<h3>Les séries les plus regardées !</h3>
 						<p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida ncididunt ut labore ....</p>
 						<a href="#" class="read-more">Read More  <img src="{{ url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
 					</div>
@@ -254,8 +266,8 @@
 	<!-- Blog section end -->
 
 
-	<!-- Intro section -->
-	<section class="intro-video-section set-bg d-flex align-items-end " data-setbg="{{ url_for('static', filename='img/promo-bg.jpg')}}">
+	<!-- Promo section -->
+	<section class="intro-video-section d-flex align-items-end" style="background:url('/static/img/promo-bg.jpg'); background-size: cover;")>
 		<a href="https://www.youtube.com/watch?v=uFsGy5x_fyQ" class="video-play-btn video-popup"><img src="{{ url_for('static', filename='img/icons/solid-right-arrow.png')}}" alt="#"></a>
 		<div class="container">
 			<div class="video-text">
@@ -264,12 +276,12 @@
 			</div>
 		</div>
 	</section>
-	<!-- Intro section end -->
+	<!-- Promo section end -->
 
 
 	<!-- Featured section -->
 	<section class="featured-section">
-		<div class="featured-bg set-bg" data-setbg="{{ url_for('static', filename='img/featured-bg.jpg')}}"></div>
+		<div class="featured-bg" style="background: url('/static/img/featured-bg.jpg');background-size:cover"></div>
 		<div class="featured-box">
 			<div class="text-box">
 				<div class="top-meta">11.11.18  /  in <a href="">Games</a></div>
@@ -335,7 +347,18 @@
 	<script src="{{ url_for('static', filename='js/owl.carousel.min.js')}}"></script>
 	<script src="{{ url_for('static', filename='js/jquery.sticky-sidebar.min.js')}}"></script>
 	<script src="{{ url_for('static', filename='js/jquery.magnific-popup.min.js')}}"></script>
-	<script src="js/main.js"></script>
+	<script src="{{ url_for('static', filename='js/main.js')}}"></script>
+	<script>
+	// Get the modal
+	var modal = document.getElementById('id01');
+
+	// When the user clicks anywhere outside of the modal, close it
+	window.onclick = function(event) {
+		if (event.target == modal) {
+			modal.style.display = "none";
+		}
+	}
+	</script>
 
 	</body>
 </html>
