--- a/sample/maserie/templates/series.html
+++ b/sample/maserie/templates/series.html
@@ -1,32 +1,29 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-	<title>EndGam - Gaming Magazine Template</title>
+	<title>Bienvenue sur ma série préférée</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="EndGam Gaming Magazine Template">
-	<meta name="keywords" content="endGam,gGaming, magazine, html">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->
-	<link href="img/favicon.ico" rel="shortcut icon"/>
+	<link href="{{ url_for('static', filename='img/favicon.ico')}}" rel="shortcut icon"/>
 
 	<!-- Google Font -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
 
 
 	<!-- Stylesheets -->
-	<link rel="stylesheet" href="css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="css/font-awesome.min.css"/>
-	<link rel="stylesheet" href="css/slicknav.min.css"/>
-	<link rel="stylesheet" href="css/owl.carousel.min.css"/>
-	<link rel="stylesheet" href="css/magnific-popup.css"/>
-	<link rel="stylesheet" href="css/animate.css"/>
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}"/>
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/owl.carousel.min.css') }}"/>
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/font-awesome.min.css') }}"/>
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/animate.css') }}"/>
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/magnific-popup.css') }}"/>
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/slicknav.min.css') }}"/>
 
 	<!-- Main Stylesheets -->
-	<link rel="stylesheet" href="css/style.css"/>
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}"/>
 
 
 	<!--[if lt IE 9]>
-		  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+	  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 	  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	<![endif]-->
 
@@ -38,51 +35,47 @@
 	</div>
 
 	<!-- Header section -->
-	<header class="header-section">
-		<div class="header-warp">
-			<div class="header-social d-flex justify-content-end">
-				<p>Follow us:</p>
-				<a href="#"><i class="fa fa-pinterest"></i></a>
-				<a href="#"><i class="fa fa-facebook"></i></a>
-				<a href="#"><i class="fa fa-twitter"></i></a>
-				<a href="#"><i class="fa fa-dribbble"></i></a>
-				<a href="#"><i class="fa fa-behance"></i></a>
+	<section class="header">
+		<header class="header-section">
+			<div class="header-warp">
+				<div class="header-bar-warp d-flex">
+					<!-- site logo -->
+					<a href="{{ url_for('home') }}" class="site-logo">
+						<img src="{{ url_for('static', filename='img/logo.png')}}" alt="">
+					</a>
+					<nav class="top-nav-area w-100">
+						<div class="user-panel">
+							<a href="">Login</a> / <a href="">Register</a>
+						</div>
+						<!-- Menu -->
+						<ul class="main-menu primary-menu">
+							<li><a href="{{ url_for('home')}}">Home</a></li>
+							<li><a href="{{ url_for('series')}}">Séries</a>
+								<ul class="sub-menu">
+									<li><a href="{{ url_for('gamesingle')}}">Par genre</a></li>
+									<li><a href="{{ url_for('gamesingle')}}">Les plus regardées</a></li>
+									<li><a href="{{ url_for('gamesingle')}}">Nouveautés</a></li>
+									<li><a href="{{ url_for('gamesingle')}}">Ma liste</a></li>
+								</ul>
+							</li>
+							<li><a href="{{ url_for('about')}}">About</a></li>
+							<li><a href="{{ url_for('contact')}}">Contact</a></li>
+						</ul>
+					</nav>
+				</div>
 			</div>
-			<div class="header-bar-warp d-flex">
-				<!-- site logo -->
-				<a href="home.html" class="site-logo">
-					<img src="./img/logo.png" alt="">
-				</a>
-				<nav class="top-nav-area w-100">
-					<div class="user-panel">
-						<a href="">Login</a> / <a href="">Register</a>
-					</div>
-					<!-- Menu -->
-					<ul class="main-menu primary-menu">
-						<li><a href="home.html">Home</a></li>
-						<li><a href="games.html">Games</a>
-							<ul class="sub-menu">
-								<li><a href="game-single.html">Game Singel</a></li>
-							</ul>
-						</li>
-						<li><a href="review.html">Reviews</a></li>
-						<li><a href="blog.html">News</a></li>
-						<li><a href="contact.html">Contact</a></li>
-					</ul>
-				</nav>
-			</div>
-		</div>
-	</header>
+		</header>
+	</section>
 	<!-- Header section end -->
 
 
 	<!-- Page top section -->
-	<section class="page-top-section set-bg" data-setbg="img/page-top-bg/1.jpg">
+	<section class="page-top-section" style="background:url('/static/img/page-top-bg/1.jpg');background-size:cover">
 		<div class="page-info">
-			<h2>Games</h2>
+			<h2>Séries</h2>
 			<div class="site-breadcrumb">
-				<a href="">Home</a>  /
-				<span>Games</span>
+				<a href="">Home</a>
+				<span>Séries</span>
 			</div>
 		</div>
 	</section>
@@ -95,6 +88,7 @@
 	<section class="games-section">
 		<div class="container">
 			<ul class="game-filter">
+				<li><a href="">#</a></li>
 				<li><a href="">A</a></li>
 				<li><a href="">B</a></li>
 				<li><a href="">C</a></li>
@@ -127,65 +121,65 @@
 					<div class="row">
 						<div class="col-lg-4 col-md-6">
 							<div class="game-item">
-								<img src="img/games/1.jpg" alt="#">
+								<img src="{{url_for('static', filename='img/games/1.jpg')}}" alt="#">
 								<h5>Zombie Appocalipse 2</h5>
-								<a href="game-single.html" class="read-more">Read More  <img src="img/icons/double-arrow.png" alt="#"/></a>
+								<a href="{{url_for('gamesingle')}}" class="read-more">Read More  <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="game-item">
-								<img src="img/games/2.jpg" alt="#">
+								<img src="{{url_for('static', filename='img/games/2.jpg')}}" alt="#">
 								<h5>Dooms Day</h5>
-								<a href="game-single.html" class="read-more">Read More  <img src="img/icons/double-arrow.png" alt="#"/></a>
+								<a href="{{url_for('gamesingle')}}" class="read-more">Read More  <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="game-item">
-								<img src="img/games/3.jpg" alt="#">
+								<img src="{{url_for('static', filename='img/games/3.jpg')}}" alt="#">
 								<h5>The Huricane</h5>
-								<a href="game-single.html" class="read-more">Read More  <img src="img/icons/double-arrow.png" alt="#"/></a>
+								<a href="{{url_for('gamesingle')}}" class="read-more">Read More  <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="game-item">
-								<img src="img/games/4.jpg" alt="#">
+								<img src="{{url_for('static', filename='img/games/4.jpg')}}" alt="#">
 								<h5>Star Wars</h5>
-								<a href="game-single.html" class="read-more">Read More  <img src="img/icons/double-arrow.png" alt="#"/></a>
+								<a href="{{url_for('gamesingle')}}" class="read-more">Read More  <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="game-item">
-								<img src="img/games/5.jpg" alt="#">
+								<img src="{{url_for('static', filename='img/games/5.jpg')}}" alt="#">
 								<h5>Candy land</h5>
-								<a href="game-single.html" class="read-more">Read More  <img src="img/icons/double-arrow.png" alt="#"/></a>
+								<a href="{{url_for('gamesingle')}}" class="read-more">Read More  <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="game-item">
-								<img src="img/games/6.jpg" alt="#">
+								<img src="{{url_for('static', filename='img/games/6.jpg')}}" alt="#">
 								<h5>E.T.</h5>
-								<a href="game-single.html" class="read-more">Read More  <img src="img/icons/double-arrow.png" alt="#"/></a>
+								<a href="{{url_for('gamesingle')}}" class="read-more">Read More  <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="game-item">
-								<img src="img/games/7.jpg" alt="#">
+								<img src="{{url_for('static', filename='img/games/7.jpg')}}" alt="#">
 								<h5>Zombie Appocalipse 2</h5>
-								<a href="game-single.html" class="read-more">Read More  <img src="img/icons/double-arrow.png" alt="#"/></a>
+								<a href="{{url_for('gamesingle')}}" class="read-more">Read More  <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="game-item">
-								<img src="img/games/8.jpg" alt="#">
+								<img src="{{url_for('static', filename='img/games/8.jpg')}}" alt="#">
 								<h5>Dooms Day</h5>
-								<a href="game-single.html" class="read-more">Read More  <img src="img/icons/double-arrow.png" alt="#"/></a>
+								<a href="{{url_for('gamesingle')}}" class="read-more">Read More  <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="game-item">
-								<img src="img/games/9.jpg" alt="#">
+								<img src="{{url_for('static', filename='img/games/9.jpg')}}" alt="#">
 								<h5>The Huricane</h5>
-								<a href="game-single.html" class="read-more">Read More  <img src="img/icons/double-arrow.png" alt="#"/></a>
+								<a href="{{url_for('gamesingle')}}" class="read-more">Read More  <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
 							</div>
 						</div>
 					</div>
@@ -246,13 +240,13 @@
 
 	<!-- Featured section -->
 	<section class="featured-section">
-		<div class="featured-bg set-bg" data-setbg="img/featured-bg.jpg"></div>
+		<div class="featured-bg" style="background:url('/static/img/featured-bg.jpg');background-size:cover"></div>
 		<div class="featured-box">
 			<div class="text-box">
 				<div class="top-meta">11.11.18  /  in <a href="">Games</a></div>
 				<h3>The game you’ve been waiting  for is out now</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliquamet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vestibulum posuere porttitor justo id pellentesque. Proin id lacus feugiat, posuere erat sit amet, commodo ipsum. Donec pellentesque vestibulum metus...</p>
-				<a href="#" class="read-more">Read More <img src="img/icons/double-arrow.png" alt="#"/></a>
+				<a href="#" class="read-more">Read More <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
 			</div>
 		</div>
 	</section>
@@ -265,7 +259,7 @@
 			<h2>Subscribe to our newsletter</h2>
 			<form class="newsletter-form">
 				<input type="text" placeholder="ENTER YOUR E-MAIL">
-				<button class="site-btn">subscribe  <img src="img/icons/double-arrow.png" alt="#"/></button>
+				<button class="site-btn">subscribe  <img src="{{url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></button>
 			</form>
 		</div>
 	</section>
@@ -276,13 +270,13 @@
 	<footer class="footer-section">
 		<div class="container">
 			<div class="footer-left-pic">
-				<img src="img/footer-left-pic.png" alt="">
+				<img src="{{url_for('static', filename='img/footer-left-pic.png')}}" alt="">
 			</div>
 			<div class="footer-right-pic">
-				<img src="img/footer-right-pic.png" alt="">
+				<img src="{{url_for('static', filename='img/footer-right-pic.png')}}" alt="">
 			</div>
 			<a href="#" class="footer-logo">
-				<img src="./img/logo.png" alt="">
+				<img src="{{url_for('static', filename='/img/logo.png')}}" alt="">
 			</a>
 			<ul class="main-menu footer-menu">
 				<li><a href="">Home</a></li>
@@ -305,13 +299,13 @@
 
 
 	<!--====== Javascripts & Jquery ======-->
-	<script src="js/jquery-3.2.1.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/jquery.slicknav.min.js"></script>
-	<script src="js/owl.carousel.min.js"></script>
-	<script src="js/jquery.sticky-sidebar.min.js"></script>
-	<script src="js/jquery.magnific-popup.min.js"></script>
-	<script src="js/main.js"></script>
+	<script src="{{ url_for('static', filename='js/jquery-3.2.1.min.js')}}"></script>
+	<script src="{{ url_for('static', filename='js/bootstrap.min.js')}}"></script>
+	<script src="{{ url_for('static', filename='js/jquery.slicknav.min.js')}}"></script>
+	<script src="{{ url_for('static', filename='js/owl.carousel.min.js')}}"></script>
+	<script src="{{ url_for('static', filename='js/jquery.sticky-sidebar.min.js')}}"></script>
+	<script src="{{ url_for('static', filename='js/jquery.magnific-popup.min.js')}}"></script>
+	<script src="{{ url_for('static', filename='js/main.js')}}"></script>
 
 	</body>
 </html>
